<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.example.flowera.FlowerViewModel" />
        <variable
            name="startFragment"
            type="com.example.flowera.StartFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/buy_flowers"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"

            app:srcCompat="@drawable/flower_logo" />

        <Button
            android:id="@+id/buy_flowers"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/checkbox_margin"
            android:gravity="center"
            android:text="@string/buy_flowers"
            app:layout_constraintBottom_toTopOf="@id/about_us"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:onClick="@{() -> startFragment.buyFlowers()}"/>

        <Button
            android:id="@+id/about_us"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/checkbox_margin"
            android:gravity="center"
            android:text="@string/about_us"
            android:onClick="@{() -> startFragment.aboutUS()}"
            app:layout_constraintBottom_toTopOf="@id/cancel_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/checkbox_margin"
            android:text="@string/cancel"
            android:onClick="@{() -> startFragment.closeApp()}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
